# mcs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.lb  Dockerfile.server  README.md  docker-compose.yml  nginx.conf
client/: Cargo.toml
client/src/: app.rs  error.rs  event.rs  main.rs  network.rs  state.rs  tui.rs
client/src/ui/: mod.rs
client/src/ui/components/: input.rs  message_list.rs  mod.rs
client/src/ui/screens/: chat.rs  login.rs
lb/: Cargo.toml  README.md
lb/src/: config.rs  core.rs  main.rs  rate_limiter.rs  state.rs
lb/src/state/: client.rs  lb.rs  mod.rs
protocol/: Cargo.toml  README.md
protocol/src/: error.rs  lib.rs
server/: Cargo.toml
server/.sqlx/: query-077307e0451524b2c87a214bdb4891818752015eb74c6d7a8d0e19f4e6a7c839.json  query-081d8d8562fa1c599f76af1bf5885c422b37a229b83850f9f2d5ee1370df97d3.json  query-29391cceb66820344868fbfe1b7e05c6059e681a98302a5b241bff62aa145b7c.json  query-3a3bef029df1d74d4bd76a8685e25e5823f663bf23ee13fa9cba2a169fef8be5.json  query-3f748ebc9672f2bcfb2aa31f59decd490ec2385ec917fb08dd461b8ed0e4980e.json  query-beb06a0b447d684443fd6f385375dad912db9c9da70db9b6c6cca9cf3ca8fc70.json  query-f48ac171be508b6723ed80042f8ee37aa61efe90f7f437f4fd8d34ba70e6a335.json
server/migrations/: 20260208055332_init_schema.sql  README.md
server/src/: config.rs  db.rs  error.rs  main.rs  redis.rs  state.rs
server/src/repository/: mod.rs  postgres.rs  redis.rs
server/src/service/: auth.rs  chat.rs  mod.rs  node.rs  state.rs
server/src/transport/: session.rs
