[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
futures = "0.3.31"
protocol = { path = "../protocol" }
ratatui = "0.30.0"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.13.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-util = {version = "0.7.17", features = ["codec"]}
