[package]
name = "lb"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "1.0.2", features = ["tokio-comp"] }
tokio = {version = "1.48.0", features = ["full"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
anyhow = "1.0.101"
rand = "0.8"
rustls = { version = "0.23.35", features = ["ring"] }
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.13.2"
dotenvy = "0.15.7"
governor = "0.10.4"
dashmap = "6.1.0"
