[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[features]
server = ["dep:sqlx"]

[dependencies]
bytes = "1.11.0"
chrono = "0.4.42"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "2.0.18"

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio-rustls", "postgres"]
optional = true
