[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
chrono = "0.4.42"
heapless = "0.9.2"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
