[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"]}
chrono = "0.4.42"
futures = "0.3.31"
local-ip-address = "0.6.10"
postcard = { version = "1.1.3", features = ["use-std"]}
protocol = { path = "../protocol" }
redis = { version = "1.0.2", features = ["tokio-comp"] }
rustls = { version = "0.23.35", features = ["ring"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.13.2"
tokio = {version = "1.48.0", features = ["full", "test-util"]}
tokio-rustls = "0.26.4"
tokio-util = {version = "0.7.17", features = ["codec"]}
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15.7"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
